fix: table: revert overflow css and update esmx strings
the overflow broke fixed header scenario

--- a/src/components/Table/Styles/table.module.scss
+++ b/src/components/Table/Styles/table.module.scss
@@ -62,7 +62,6 @@
         font-family: $octuple-font-family;
         font-size: $table-font-size;
         background: $table-background-color;
-        overflow: hidden;
 
         table {
             width: 100%;
